--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,12 @@ server:
 spring:
 
   datasource:
-     driver-class-name: com.mysql.cj.jdbc.Driver
-     jdbc-url: jdbc:mysql://awsinstance.c1jvpmhipldv.ap-northeast-1.rds.amazonaws.com:3306/awsDB
-     url: jdbc:mysql://awsinstance.c1jvpmhipldv.ap-northeast-1.rds.amazonaws.com:3306/awsDB
-     username: awsuser
-     password: awspassword
-     
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:test;MODE=MySQL;DB_CLOSE_DELAY=-1;MODE=MySQL
+    initialize: true
+    username: sa # database 用戶名
+    password:  # database 密碼    
+
   sql:
     init:
       encoding: UTF-8
@@ -18,10 +18,11 @@ spring:
   jpa:
     show-sql: true  
     defer-datasource-initialization: true
-    
+
   mvc:
     pathmatch:
-      matching-strategy: ANT_PATH_MATCHER
+      matching-strategy: ANT_PATH_MATCHER      
+      
       
 logging:
     name: C:/Users/User/Documents/SpringWorkSpace/OAuth2Server/logsauth.log
